[package]
name = "ethsubs"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anyhow = "1"
#futures = "0.3"
#jsonrpsee-core = "0.15"
#jsonrpsee-http-server = "0.15.1"
#jsonrpsee-ws-server = "0.15.1"
#jsonrpsee-http-client = "0.15"
#jsonrpsee-ws-client = "0.15"
#jsonrpsee-proc-macros = "0.15"
##jsonrpsee-client-ws-transport = "0.16"
#tracing = "0.1.34"
#tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
#tokio = { version = "1.16", features = ["full"] }
#tokio-stream = { version = "0.1", features = ["sync"] }
#serde_json = { version = "1" }
#tower-http = { version = "0.4.0", features = ["full"] }
#tower = { version = "0.4.13", features = ["full"] }
#hyper = "0.14.20"
#console-subscriber = "0.1.8"


anyhow = "1"
either = "1.8"
serde = "1"
futures = "0.3"
jsonrpsee = { version = "0.16.2", features = ["full"], git = "https://github.com/paritytech/jsonrpsee", branch = "master" }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"