[package]
name = "ethsubs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
either = "1.8"
futures = "0.3"
jsonrpsee = { version = "0.16.2", features = ["full"], git = "https://github.com/paritytech/jsonrpsee", branch = "master" }
serde = "1"
serde_json = "1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"